# PH-Economic-Tracker

./: .env.example  .gitignore  Dockerfile  README.md  USAGE.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
dashboard/: app.py
scripts/: entrypoint.sh
src/ph_economic/: __init__.py  config.py  loader.py  models.py  pipeline.py
src/ph_economic/ingestion/: __init__.py  bsp.py  psa.py  worldbank.py
tests/: conftest.py  test_ingestion.py  test_loader.py  test_models.py
transforms/: dbt_project.yml  profiles.yml
transforms/models/: sources.yml
transforms/models/marts/: _marts.yml  cpi_trend.sql  economic_dashboard.sql  gdp_trend.sql  remittance_trend.sql
transforms/models/staging/: _staging.yml  stg_economic_indicators.sql  stg_ofw_remittances.sql
