[project]
name = "ph-economic-tracker"
version = "0.1.0"
description = "Philippine PSA economic indicators + OFW remittance pipeline — PostgreSQL + dbt + Streamlit"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "psycopg2-binary>=2.9.9",
    "polars>=0.20.0",
    "rich>=13.7.0",
    "tenacity>=8.3.0",
    "python-dotenv>=1.0.0",
    "dbt-postgres>=1.8.0",
    "typer>=0.12.0",
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "coverage[toml]>=7.5.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
ph-tracker = "ph_economic.pipeline:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ph_economic"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=ph_economic --cov-report=term-missing --cov-report=xml"
markers = [
    "integration: tests requiring a live PostgreSQL connection",
]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.coverage.run]
source = ["src/ph_economic"]
omit = ["tests/*", "dashboard/*"]
